--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p> xin chào <p>
 <h1> Tôi tên là Hồ Quốc Duy <h1>
 <h2> Sinh năm 02/11/2003
-  <img src="https://vcdn-ngoisao.vnecdn.net/2021/08/06/messi1-7421-1628222376.jpg">
+  <img src="https://znews-photo.zadn.vn/w660/Uploaded/mdf_eioxrd/2021_07_12/2.jpg">
