--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <p> xin chào <p>
 <h1> Tôi tên là Hồ Quốc Duy <h1>
 <h2> Sinh năm 02/11/2003
-  <img src="https://znews-photo.zadn.vn/w660/Uploaded/mdf_eioxrd/2021_07_12/2.jpg">
+<h3> thần tượng 
+  <img src="https://cf.shopee.vn/file/bdc23f920b69877bb35bb0b55c2396bc">
+<
