--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <p> xin chào <p>
 <h1> Tôi tên là Hồ Quốc Duy <h1>
 <h2> Sinh năm 02/11/2003
-<h3> thần tượng 
+<h3> thần tượng của tôi 
+  
 <img src="https://cf.shopee.vn/file/bdc23f920b69877bb35bb0b55c2396bc">
 
