--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p> xin chào </p>
+<p> HOQUOCDUY11GITHUB.IO </p>
 <h1> Tôi tên là Hồ Quốc Duy </h1>
 <h2> Sinh năm 02/11/2003 </h2>
 <h3> thần tượng của tôi </h3>
