--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <h1> Tôi tên là Hồ Quốc Duy </h1>
 <h2> Sinh năm 02/11/2003 </h2>
 <h3> thần tượng của tôi </h3>
-  
-<img src="https://cf.shopee.vn/file/bdc23f920b69877bb35bb0b55c2396bc">
+version: 2
+updates:
+  - package-ecosystem: "composer" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
+      interval: "daily"
+
 
