--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <p> HOQUOCDUY11GITHUB.IO </p>
 <h1> Tôi tên là Hồ Quốc Duy </h1>
 <h2> Sinh năm 02/11/2003 </h2>
-<h3> thần tượng của tôi </h3>
-version: 2
+<h3>version: 2
 updates:
   - package-ecosystem: "composer" # See documentation for possible values
     directory: "/" # Location of package manifests
