--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-<p> HOQUOCDUY11GITHUB.IO </p>
+<p> **HOQUOCDUY11GITHUB.IO** </p>
 <h1> Tôi tên là Hồ Quốc Duy </h1>
 <h2> Sinh năm 02/11/2003 </h2>
-<h3>version: 2
-updates:
-  - package-ecosystem: "composer" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "daily"
+GMAIL cá nhân {https://mail.google.com/mail/u/0/#inbox]
 
 
