--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <p> **HOQUOCDUY11GITHUB.IO** </p>
 <h1> Tôi tên là Hồ Quốc Duy </h1>
 <h2> Sinh năm 02/11/2003 </h2>
-GMAIL cá nhân {https://mail.google.com/mail/u/0/#inbox]
+GMAIL cá nhân {liên kết} (https://mail.google.com/mail/u/0/#inbox)
 
 
