--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p> **HOQUOCDUY11GITHUB.IO** </p>
+**HOQUOCDUY11GITHUB.IO**
 <h1> Tôi tên là Hồ Quốc Duy </h1>
 <h2> Sinh năm 02/11/2003 </h2>
 GMAIL cá nhân {liên kết} (https://mail.google.com/mail/u/0/#inbox)
