--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-**HOQUOCDUY11GITHUB.IO**
-<h1> Tôi tên là Hồ Quốc Duy </h1>
-<h2> Sinh năm 02/11/2003 </h2>
-GMAIL cá nhân {liên kết} (https://mail.google.com/mail/u/0/#inbox)
+<!DOC
+<h1>HoQuocDuy11.github.io</h1>
+<h2>Tôi Tên:Hồ Quốc Duy</h2>
+<h3>Sinh năm:02/11/2003</h3>
+<h3>Quê Quán:Nha Trang-Khánh Hòa</h3>
 
+</body>
+</html>
 
+TYPE html>
+<html>
+<body>
