--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <h2>Tôi Tên:Hồ Quốc Duy</h2>
 <h3>Sinh năm:02/11/2003</h3>
 <h3>Quê Quán:Nha Trang-Khánh Hòa</h3>
-
+<h2>Gamail cá nhân </h2>
+/
+<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
 </body>
 </html>
 
