--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOC
-<h1>HoQuocDuy11.github.io</h1>
-<h2>Tôi Tên:Hồ Quốc Duy</h2>
-<h3>Sinh năm:02/11/2003</h3>
-<h3>Quê Quán:Nha Trang-Khánh Hòa</h3>
-<h2>Gamail cá nhân </h2>
+<h1>xin chào các bạn </h1>
+<h2>tôi rất vui vì cơ hội này để giới thiệu bản thân mình.tôi tên là Hồ Quốc Duy</h2>
+<h2>tôi sinh ra Nha Trang-Khánh Hòa</h2>
+<p>tôi sinh năm 2003</p>
+ <p>tôi có sở thích được du lịch và khám phá</p>
+<p>tôi hiện đang độc thân </p>
+<p>Gamail cá nhân </p>
 /
-<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
+<h2<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
 </body>
 </html>
 
-TYPE html>
 <html>
 <body>
