--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <p>tôi sinh năm 2003</p>
  <p>tôi có sở thích được du lịch và khám phá</p>
 <p>tôi hiện đang độc thân </p>
+<h2> THÔNG TIN LIÊN HỆ</h2>
 <p>Gamail cá nhân </p>
 /
 <h2<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
