--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOC
-<h1>xin chào các bạn </h1>
-<h2>tôi rất vui vì cơ hội này để giới thiệu bản thân mình.tôi tên là Hồ Quốc Duy</h2>
-<h2>tôi sinh ra Nha Trang-Khánh Hòa</h2>
-<p>tôi sinh năm 2003</p>
- <p>tôi có sở thích được du lịch và khám phá</p>
-<p>tôi hiện đang độc thân </p>
+<h2>Tôi rất vui vì cơ hội này để giới thiệu bản thân mình.Tôi tên là Hồ Quốc Duy</h2>
+<h2>Tôi sinh ra Nha Trang-Khánh Hòa</h2>
+<p>Tôi sinh năm 2003</p>
+ <p>Tôi có sở thích được du lịch và khám phá</p>
+<p>Tôi hiện đang độc thân </p>
 <h2> THÔNG TIN LIÊN HỆ</h2>
 <p>Gamail cá nhân </p>
-/
+
 <h2<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
 </body>
 </html>
