--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <p>Tôi hiện đang độc thân </p>
 <h2> THÔNG TIN LIÊN HỆ</h2>
 <p>Gamail cá nhân </p>
-<h2<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
+<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
 
 </body>
 </html>
