--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOC
-<h1>HoQuocDuy11.github.io</h1>
-<h2>Tôi rất vui vì cơ hội này để giới thiệu bản thân mình.Tôi tên là Hồ Quốc Duy</h2>
-<h2>Tôi sinh ra Nha Trang-Khánh Hòa</h2>
-<p>Tôi sinh năm 2003</p>
- <p>Tôi có sở thích được du lịch và khám phá</p>
-<p>Tôi hiện đang độc thân </p>
-<h2> THÔNG TIN LIÊN HỆ</h2>
-<p>Gamail cá nhân </p>
-<a href="https://mail.google.com/mail/u/0/#inbox">link gmail</a>
-<img src="
+<!DOCTYPE html>
+<html>
+ <head>
+  <title>DOG</title>
+</head>
+
+<body>
+
+<h1>Giống chó hung dữ nhất thế giới</h1>
+
+<p>Pitbull được biết đến là loài chó với trí thông minh, vui tươi và hành vi tình cảm. Nhưng tất cả những đặc điểm đó cũng không ngăn được việc chúng nhận danh hiệu là một trong những giống chó dữ bậc nhất cùng với việc bị cấm nuôi ở nhiều quốc gia trên thế giới.</p>
+<p>Chó Pitbull là giống chó chiến đấu và sẽ hoàn thành nhiệm vụ bất chấp mọi khó khăn. Chúng có cơ hàm cực khoẻ với những cú cắn cực mạnh. Nổi tiếng là “cắn không nhả”. Bởi vì mang trong mình dòng máu chiến đấu nên chó Pitbull được huấn luyện để tham gia vào những trận đấu đẫm máu ở một số quốc gia. Khi xung trận, Pitbull là những chiến binh mạnh mẽ sẽ chiến đấu đến hơi thở cuối cùng. Pitbull được mệnh danh là “chúa tể của các loài chó đấu”.</p>
+<p>Chó Pitbull bình thường rất thân thiện, hiền lành, trung thành và sống rất tình cảm, trừ khi chúng bị đe doạ hoặc tấn công. Tại Việt Nam, Pitbull được nuôi rất nhiều nhưng cần phải cực kỳ lưu ý về vấn đề đào tạo và huấn luyện cho chúng từ nhỏ để tránh xảy ra những việc ngoài ý muốn..</p>
+
 </body>
 </html>
 
-<html>
-<body>
