--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h3> Sinh năm:02/11/2003</h3>
 <h3> Tôi sinh ra và lớn lên tại Nha Trang-Khánh Hòa</3>
 <h3> Hiện tôi đang học tập tại trường CD-KTCNNT</h3>
-<h3> Các bạn có thể liên hệ tôi qua email này:hoquocduy02112003@gmail.com</h3>">
+<h3> Các bạn có thể liên hệ tôi qua email này:hoquocduy02112003@gmail.com</h3>
 </body>
 </html>
 
