--- a/index.html
+++ b/index.html
@@ -15,4 +15,38 @@
 <h3> Các bạn có thể liên hệ tôi qua email này:hoquocduy02112003@gmail.com</h3>
 </body>
 </html>
+</style>
+</head>
+<body>
 
+<h2>THỜI KHÓA BIỂU </h2>
+
+<table style="width:100%">
+  <tr>
+    <th></th>
+    <th>T2</th>
+    <th>T3</th>
+    <th>T4</th>
+    <th>T5</th>
+    <th>T6</th>
+    <th>T7</th>
+  </tr>
+  <tr>
+    <td> SÁNG</td>
+    <td>lập trình python</td>
+    <td>lập trình python</td>
+    <td>lắp ráp máy tính</td>
+    <td></td>
+    <td>Thiết kế và quản trị Website </td>
+    
+  </tr>
+  <tr>
+    <td> CHIỀU</td>
+    <td> </td>
+    <td> thể dục </td>
+    <td> tiếng anh</td>
+    <td> cơ sở dữ liệu</td>
+    <td> Thiết kế và quản trị Website</td>
+    <td>Cấu trúc dữ iệu và giải thuật </td>
+  </tr>
+</table>
