--- a/index.html
+++ b/index.html
@@ -1,52 +1,22 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>Hồ Quốc Duy</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-<h1>👋 Hello, welcome to my website!</h1>
-<h2> Tên tôi là:Hồ Quốc Duy</h2>
-<h3> Sinh năm:02/11/2003</h3>
-<h3> Tôi sinh ra và lớn lên tại Nha Trang-Khánh Hòa</3>
-<h3> Hiện tôi đang học tập tại trường <a href="http://cdktcnnt.edu.vn/">CD KTCNNT</a></h3>
-<h3> Các bạn có thể liên hệ tôi qua email này:hoquocduy02112003@gmail.com</h3>
-</body>
+    <head>
+        <title>WEBDEV CREATIONS</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+    <body>
+        <header>
+            <div class="main">
+                <div class="logo">
+                    <img src="logo.png" >
+                </div>
+                <ul>
+                    <li><a href="#">trang chủ</a></li>
+                    <li><a href="#">tìm kiếm</a></li>
+                    <li><a href="#">liên hệ </a></li>
+                    <li><a href="#">trợ giúp</a></li>
+                </ul>
+            </div>
+        </header>
+    </body>
 </html>
-</style>
-</head>
-<body>
-
-<h2>THỜI KHÓA BIỂU </h2>
-
-<table style="width:100%">
-  <tr>
-    <th></th>
-    <th>T2</th>
-    <th>T3</th>
-    <th>T4</th>
-    <th>T5</th>
-    <th>T6</th>
-    <th>T7</th>
-  </tr>
-  <tr>
-    <td> SÁNG</td>
-    <td>lập trình python</td>
-    <td>lập trình python</td>
-    <td>lắp ráp máy tính</td>
-    <td></td>
-    <td>Thiết kế và quản trị Website </td>
-    
-  </tr>
-  <tr>
-    <td> CHIỀU</td>
-    <td> </td>
-    <td> thể dục </td>
-    <td> tiếng anh</td>
-    <td> cơ sở dữ liệu</td>
-    <td> Thiết kế và quản trị Website</td>
-    <td>Cấu trúc dữ iệu và giải thuật </td>
-  </tr>
-</table>
