--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header>
             <div class="main">
                 <div class="logo">
-                    <img src="logo.png" >
+                    <img src="" alt="">
                 </div>
                 <ul>
                     <li><a href="#">trang chủ</a></li>
