--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <title>WEBDEV CREATIONS</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <style>
+            body {
+                background-image: url("duy.jpg");
+            }
+        </style>
     </head>
     <body>
         <header>
@@ -16,5 +21,17 @@
                 </ul>
             </div>
         </header>
+    <!-- <br /><br /><br /><br /> -->
+    
+    <h1 aling="center">
+         <form face="Lato" color="#017bf5" size="7" >GOOGLE</form> 
+    </h1>
+    <div class="search-text">
+        <input type="search" name="Tìm kiếm" placeholder="Tìm kiếm của bạn...">
+        <a href="#" class="search-btn">
+            <i class="fa fa-search"></i>
+        </a>
+
+    </div>
     </body>
 </html>
